
[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "builder2d"
version = "0.3.0"
description = "A lightweight SDL2-based 2D game framework"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "PySDL2>=0.9.17",
  "pysdl2-dll>=2.32.0"
]

[tool.setuptools.packages.find]
include = ["builder2d*"]
